syntax = "proto3";

package static.v1;
option go_package = "github.com/asynccnu/ccnubox-be/be-api/gen/proto/static/v1;staticv1";

//import "google/protobuf/any.proto";

service StaticService {
  rpc GetStaticByName (GetStaticByNameRequest) returns (GetStaticByNameResponse);
  rpc SaveStatic (SaveStaticRequest) returns (SaveStaticResponse);
  rpc GetStaticsByLabels (GetStaticsByLabelsRequest) returns (GetStaticsByLabelsResponse);
}

message Static {
  string name = 1;
  string content = 2;
  map<string,string> labels = 3;
}

message GetStaticByNameRequest {
  string name = 1;
}

message GetStaticByNameResponse {
  Static static = 1;
}

message SaveStaticRequest {
  Static static = 1;
}

message SaveStaticResponse {
}

message GetStaticsByLabelsRequest {
  map<string,string> labels = 1;
}

message GetStaticsByLabelsResponse {
  repeated Static statics = 1;
}